plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.mansereok'
version = '0.0.1-SNAPSHOT'
description = 'mansereok'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1"
        mavenBom "software.amazon.awssdk:bom:2.21.46"
    }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Database
    implementation 'mysql:mysql-connector-java:8.0.33'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // swagger-ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // Oauth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // 포트원 API 호출
    implementation 'io.portone:server-sdk:0.21.0'

    // S3 bucket
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    // AWS SDK v2 SES
    implementation 'software.amazon.awssdk:ses'

    // 1. Spring Retry 라이브러리
    implementation 'org.springframework.retry:spring-retry'

    // 2. AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Micrometer Prometheus
    implementation 'io.micrometer:micrometer-registry-prometheus'
}

tasks.named('test') {
    useJUnitPlatform()
}
